--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-This is an empty file.
+<!DOCTYPE html> <!-- doctype declaration -->
+<html> <!-- opening HTML tag -->
+    <head> <!-- opening head tag -->
+        <title>Page Title</title> <!-- title tag -->
+    </head> <!-- closing head tag -->
+    <body>  <!-- opening body tag -->
+        <h1>Homepage Headline</h1> <!-- h1 headline -->
+        <p>This is a paragraph.</p> <!-- paragraph -->
+    </body> <!-- closing body tag -->
+</html> <!-- closing HTML tag -->
